--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -34,17 +34,23 @@
                         <div class="row">
                             <div class="col">
                                 <h3>{{ inscription.event.title }} ({{ inscription.event.category }})</h3>
-                                <p>{{ inscription.event.person }} - {{ inscription.event.event_date|date:'d/m/Y à h:m' }}</p>
+                                <p>Par {% if inscription.event.person.pk is not person.pk %}
+                                    <a href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
+                                    {{ inscription.event.person.pseudo }} {% endif %}
+                                    le {{ inscription.event.event_date|date:'d/m/y à h:m' }}
+                                </p>
                                 <p>{{ inscription.event.description }}</p>
                                 <p>{{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}</p>
                                 {% if inscription.getKarma %}
                                     <p class="text-success">{{ inscription.getKarma }}/10</p>
                                 {% else %}
-                                    <a class="text-success" data-toggle="modal" data-target="#rating_modal_{{ inscription.event.pk }}">Noter</a>
+                                    <a class="text-success" data-toggle="modal"
+                                       data-target="#rating_modal_{{ inscription.event.pk }}">Noter</a>
                                 {% endif %}
                             </div>
                         </div>
-                        <div id="rating_modal_{{ inscription.event.pk }}" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
+                        <div id="rating_modal_{{ inscription.event.pk }}" class="modal fade" tabindex="-1" role="dialog"
+                             data-backdrop="static"
                              data-keyboard="false">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
@@ -54,7 +60,8 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
-                                    <form method="post" action="{% url 'profil-rating-finished-events' inscription.event.pk %}">
+                                    <form method="post"
+                                          action="{% url 'profil-rating-finished-events' inscription.event.pk %}">
                                         <div class="modal-body">
                                             {% csrf_token %}
                                             {% bootstrap_field form.note required_css_class='required' %}
@@ -78,33 +85,33 @@
             </div>
         </div>
     </div>
-<script>
-{#$(document).on("click", "#rating", function () {#}
-{#    console.log('CLICK')#}
-{#     var event_id = $(this).data('id');#}
-{#     $(".modal-body ").val( myBookId );#}
-{#     // As pointed out in comments,#}
-{#     // it is unnecessary to have to manually call the modal.#}
-{#     // $('#addBookDialog').modal('show');#}
+    <script>
+        {#$(document).on("click", "#rating", function () {#}
+        {#    console.log('CLICK')#}
+        {#     var event_id = $(this).data('id');#}
+        {#     $(".modal-body ").val( myBookId );#}
+        {#     // As pointed out in comments,#}
+        {#     // it is unnecessary to have to manually call the modal.#}
+        {#     // $('#addBookDialog').modal('show');#}
 
 
-$(document).ready(function () {
+        $(document).ready(function () {
 
-    $('#rating').on('click', function (e) {
-        console.log('CLICK')
-        let id = $('#rating').attr('data-id')
-        //let url = $(this).attr("href")
-        if (id != null) {
-            //url = url + '?event=' + id
-            window.history.replaceState(null, null, "?event="+id);
-        }
+            $('#rating').on('click', function (e) {
+                console.log('CLICK')
+                let id = $('#rating').attr('data-id')
+                //let url = $(this).attr("href")
+                if (id != null) {
+                    //url = url + '?event=' + id
+                    window.history.replaceState(null, null, "?event=" + id);
+                }
 
-    })
+            })
 
-})
+        })
 
 
-</script>
+    </script>
 {% endblock %}
 {% block extra_js %}
 {% endblock %}
