--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -63,7 +63,7 @@
                                         {% endif %}
                                     {% endif %}
                                 </div>
-                                    <p>Par {{ event.person.pseudo }} le {{ event.event_date|date:'d/m/y à h:m' }}</p>
+                                    <p>Par {% if event.person.pk is not person.pk %} <a href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a> {% else %} {{ event.person.pseudo }} {% endif %} le {{ event.event_date|date:'d/m/y à h:m' }}</p>
 
                                     <p>{{ event.city|title }}</p>
                                     {% if user.pk %}
