--- a/events/templates/persons/events/my_registered_events.html
+++ b/events/templates/persons/events/my_registered_events.html
@@ -12,12 +12,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
                         </li>
+                        {% if person.person_type != "professionnel" %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes inscriptions</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes inscriptions passées</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
 
