--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -1,6 +1,10 @@
 {% extends 'persons/base_navbar.html' %}
+{% load leaflet_tags %}
 
 {% block content %}
+
+
+     {% leaflet_map "map" callback="window.map_init_basic"%}
     <div class="row">
         <a class="text-primary" href="{% url 'events' %}"><i class="fa fa-arrow-left"></i> retour</a>
         {% if event %}
@@ -28,5 +32,14 @@
             </div>
         {% endif %}
     </div>
+<script>
+        var c_x = {{ event.coordonate_x }};
+        var c_y = {{ event.coordonate_y }};
+        var lat_long = [c_x, c_y]
+    function map_init_basic (map, options) {
+        L.marker([c_x, c_y]).addTo(map);
+        map.setView(lat_long, 15);
+    }
+</script>
 
 {% endblock %}
