--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -17,6 +17,17 @@
             </div>
             <div class="row mt-3">
                 <div class="col-md-2 d-md-block">
+                    <b>Lieux</b>
+                    <form action="{% url 'events' %}" class="form-inline mb-2" method="get">
+                        <div class="row">
+                            <input name="lieu" class="form-control col-7 ml-3" type="search" placeholder="Cergy">
+                        </div>
+                        <div class="row">
+                            <div  class="col-7">
+                                <button class="btn btn-outline-primary" type="submit">Recherche</button>
+                            </div>
+                        </div>
+                    </form>
                     <b>Category</b>
                     <ul class="list-unstyled">
                         {% for value, label, count in category %}
@@ -26,10 +37,15 @@
                                 {% else %}
                                     <a class="badge badge-pill badge-light"
                                        href="{% url 'events' %}?category_filter={{ value }}&order_filter=
+                                               {{ order_filter }}{% if query is not None %}&q=
 
 
 
-                                               {{ order_filter }}{% if query is not None %}&q={{ query }}{% endif %}">{{ label|title }}
+
+
+
+
+                                           {{ query }}{% elif lieu_filter is not None %}&lieu={{ lieu_filter }}{% endif %}">{{ label|title }}
                                         ({{ count }})</a>
                                 {% endif %}
                             </li>
@@ -40,10 +56,12 @@
                         <li>
 
                             <a class="badge badge-pill badge-{% if order_filter == 'event_date' %}primary{% else %}light{% endif %}"
-                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=event_date{% if query is not None %}&q={{ query }}{% endif %}"><i
+                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=event_date{% if query is not None %}&q=
+                                   {{ query }}{% elif lieu_filter is not None %}&lieu={{ lieu_filter }}{% endif %}"><i
                                     class="fas fa-arrow-up"></i> Date croissant</a>
                             <a class="badge badge-pill badge-{% if order_filter == '-event_date' %}primary{% else %}light{% endif %}"
-                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=-event_date{% if query is not None %}&q={{ query }}{% endif %}"><i
+                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=-event_date{% if query is not None %}&q=
+                                   {{ query }}{% elif lieu_filter is not None %}&lieu={{ lieu_filter }}{% endif %}"><i
                                     class="fas fa-arrow-down"></i> Date decroissant</a>
                         </li>
                     </ul>
