--- a/events/templates/persons/registration/login.html
+++ b/events/templates/persons/registration/login.html
@@ -1,10 +1,9 @@
-{% extends 'persons/base.html' %}
+{% extends 'persons/base_navbar.html' %}
 {% load bootstrap4 %}
 
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
-    <a class="btn btn-primary" href="{% url 'home' %}">Accueil</a>
     <div class="login row justify-content-center mt-4">
         <div class="col col-sm-6 col-md-4">
             <p class="text-muted">Veuillez vous connecter</p>
