Change form template

--- a/events/templates/persons/base_navbar.html
+++ b/events/templates/persons/base_navbar.html
@@ -23,7 +23,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% if user.pk %}
-                            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
+                            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>
+                                Déconnexion</a>
                         {% else %}
                             <a class="dropdown-item" href="{% url 'login' %}">Connexion / Creer un compte</a>
                         {% endif %}
