--- a/events/templates/events/event_form.html
+++ b/events/templates/events/event_form.html
@@ -2,32 +2,38 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            {% bootstrap_field form.title required_css_class='required' %}
-            {% bootstrap_field form.description required_css_class='required' %}
-            {% bootstrap_field form.address required_css_class='required' %}
-            <div class="row">
-                <div class="col-md-6">
-                    {% bootstrap_field form.zip_code required_css_class='required' %}
-                </div>
-                <div class="col-md-6">
-                    {% bootstrap_field form.city required_css_class='required' %}
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    {% bootstrap_field form.category required_css_class='required' %}
-                </div>
-                <div class="col-md-6">
-                    {% bootstrap_field form.event_date required_css_class='required' %}
-                </div>
-            </div>
-             <a class="btn btn-primary" data-toggle="modal" data-target="#add_modal">Ajouter</a>
-    </form>
+    <div class="row my-5">
+        <div class="col-8 m-auto">
+            <form method="post">
+                {% csrf_token %}
+                <div>
+                    {% bootstrap_field form.title required_css_class='required' %}
+                    {% bootstrap_field form.description required_css_class='required' %}
+                    {% bootstrap_field form.address required_css_class='required' %}
+                    <div class="row">
+                        <div class="col-md-6">
+                            {% bootstrap_field form.zip_code required_css_class='required' %}
+                        </div>
+                        <div class="col-md-6">
+                            {% bootstrap_field form.city required_css_class='required' %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            {% bootstrap_field form.category required_css_class='required' %}
+                        </div>
+                        <div class="col-md-6">
+                            {% bootstrap_field form.event_date required_css_class='required' %}
+                        </div>
+                    </div>
+                    <a class="text-danger mr-2" href="{% url 'events' %}">Annuler</a>
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#add_modal">Ajouter</a>
+            </form>
+        </div>
+    </div>
 
-     <div id="add_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
+
+    <div id="add_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
          data-keyboard="false">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
