Fix create event

--- a/events/templates/persons/registration/incription.html
+++ b/events/templates/persons/registration/incription.html
@@ -20,6 +20,6 @@
             {% bootstrap_field form.pseudo required_css_class='required'%}
             {% bootstrap_field form.person_type required_css_class='required'%}
         </div>
-        <button type="submit">Ajouter</button>
+        <button type="submit" class="btn btn-primary">Ajouter</button>
     </form>
 {% endblock %}
