--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -19,6 +19,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes inscriptions passées</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profil-favorite-events' %}">Mes évenements favoris</a>
+                        </li>
                     </ul>
                 </div>
 
