--- a/events/templates/persons/profil/profil_detail.html
+++ b/events/templates/persons/profil/profil_detail.html
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes inscriptions passées</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'profil-favorite-events' %}">Mes évenements favoris</a>
+            </li>
         {% endif %}
     </ul>
     <div class="row my-3">
