--- a/events/templates/persons/profil/profil_form.html
+++ b/events/templates/persons/profil/profil_form.html
@@ -1,6 +1,6 @@
 {% load bootstrap4 %}
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row mb-3">
         <div class="col-md-8">
@@ -9,6 +9,11 @@
         <div class="col-md-4 text-right">
             <a class="btn btn-link" href="{% url 'profil' %}">Annuler</a>
             <button type="submit" class="btn btn-primary ml-2">Enregistrer</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            {% bootstrap_field form.imageProfil required_css_class='required' %}
         </div>
     </div>
     <div class="row">
