--- a/events/templates/persons/events/my_events_details.html
+++ b/events/templates/persons/events/my_events_details.html
@@ -7,10 +7,10 @@
                 <div class="col">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+                            <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+                            <a class="nav-link" href="{% url 'profil-events' %}">Mes évenements</a>
                         </li>
                         {% if person.person_type != "professionnel" %}
                         <li class="nav-item">
@@ -39,7 +39,7 @@
                     {% for event in events %}
                         <div class="row ">
                             <div class="col">
-                                <h3 class="col-md-12 p-0 mt-3">{{ event.title }} ({{ event.category }})</h3>
+                                <a href="{% url 'description-event' event.pk %}"><h3 class="mt-3">{{ event.title }}</h3></a><span>({{ event.category }})</span>
                                 <p>{{ event.event_date|date:'d/m - h:m' }}</p>
                                 <p>{{ event.description }}</p>
                                 <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
