--- a/events/templates/persons/events/my_favorite_events.html
+++ b/events/templates/persons/events/my_favorite_events.html
@@ -7,10 +7,10 @@
                 <div class="col">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+                            <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+                            <a class="nav-link" href="{% url 'profil-events' %}">Mes évenements</a>
                         </li>
                         {% if person.person_type != "professionnel" %}
                             <li class="nav-item">
@@ -37,8 +37,8 @@
                     {% for favorite in favorite_events %}
                         <div class="row">
                             <div class="col">
-                                <h3 class="col mt-3 p-0">{{ favorite.event.title }}
-                                    ({{ favorite.event.category }})</h3>
+                                <a href="{% url 'description-event' favorite.event.pk %}"><h3 class="mt-3">{{ favorite.event.title }}</h3></a>
+                                <span>({{ favorite.event.category }})</span>
                                 <p>Par {% if favorite.event.person.pk is not person.pk %}
                                     <a href="{% url 'profil-show-user' favorite.event.person.pk %}">{{ favorite.event.person.pseudo }}</a> {% else %}
                                     {{ favorite.event.person.pseudo }} {% endif %}
