--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -8,10 +8,10 @@
                 <div class="col">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+                            <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+                            <a class="nav-link" href="{% url 'profil-events' %}">Mes évenements</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes inscriptions</a>
@@ -30,13 +30,12 @@
                 <div class="col mt-3">
                     <div class="row">
                         <h1 class="col-md-7">Mes Inscriptions passées</h1>
-                        <div class="col-md-5 text-right">
-                        </div>
+
                     </div>
                     {% for inscription in inscription_events %}
                         <div class="row">
                             <div class="col">
-                                <h3>{{ inscription.event.title }} ({{ inscription.event.category }})</h3>
+                                <a href="{% url 'description-event' inscription.event.pk %}"><h3 class="mt-3">{{ inscription.event.title }}</h3></a><span>({{ inscription.event.category }})</span>
                                 <p>Par {% if inscription.event.person.pk is not person.pk %}
                                     <a href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
                                     {{ inscription.event.person.pseudo }} {% endif %}
