--- a/events/templates/persons/events/my_registered_events.html
+++ b/events/templates/persons/events/my_registered_events.html
@@ -7,10 +7,10 @@
                 <div class="col">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+                            <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+                            <a class="nav-link" href="{% url 'profil-events' %}">Mes évenements</a>
                         </li>
                         {% if person.person_type != "professionnel" %}
                         <li class="nav-item">
@@ -37,9 +37,8 @@
                     {% for inscription in inscription_events %}
                         <div class="row ">
                             <div class="col">
-
-                                <h3 class="col mt-3">{{ inscription.event.title }}
-                                    ({{ inscription.event.category }})</h3>
+                                <a href="{% url 'description-event' inscription.event.pk %}"><h3 class="mt-3">{{ inscription.event.title }}</h3></a>
+                                <span>({{ inscription.event.category }})</span>
                                 <p>Par {% if inscription.event.person.pk is not person.pk %}
                                     <a href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
                                     {{ inscription.event.person.pseudo }} {% endif %} le {{ inscription.event.event_date|date:'d/m/y à h:m' }}
