--- a/events/templates/persons/home.html
+++ b/events/templates/persons/home.html
@@ -1,1 +1,46 @@
 {% extends 'persons/base_navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+    <div>
+        <div>
+            <h2>POUR QUI ?</h2>
+        </div>
+        <div>
+            <p>Ce site est accessible pour les professionnels de l'évènement comme pour les particuliers
+                qui
+                souhaitent
+                promouvoir des évènements ou simplement les utilisateurs qui souhaite participer.</p>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <h2>QUI SOMMES-NOUS?</h2>
+                </div>
+                <div>
+                    <p>Un groupe d'étudiant qui souhaite divertir les gens. Enfaite on aime faire des activités
+                        sympas
+                        et découvrir
+                        de nouvelles choses. On a donc souhaité faire rencontrer les gens avec des activités,
+                        aider les
+                        gens à
+                        sortir autrement.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h2>VOUS SOUHAITEZ ?</h2>
+                </div>
+                <div>
+                    <p> Faire quelque chose de nouveau ou apprendre?
+                        Vous ne savez pas quoi faire avec votre enfant, vote soeur ou bien vos copines pour
+                        sortir ? Trouver
+                        des
+                        évènements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
+                        évènements
+                        précédents.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
