--- a/events/templates/persons/base.html
+++ b/events/templates/persons/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/event.css' %}">
     <link rel="stylesheet" href="{% static 'fontawesome/css/fontawesome.min.css' %}">
     {% bootstrap_javascript jquery='full' %}
     {% leaflet_js %}
