--- a/events/templates/persons/base_navbar.html
+++ b/events/templates/persons/base_navbar.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block header %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="back-nav navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'home' %}">ShareEventTogether</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             </ul>
             <form action="{% url 'events' %}" class="form-inline my-2 my-lg-0" method="get">
                 <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="search btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
