--- a/events/templates/persons/events/my_events_details.html
+++ b/events/templates/persons/events/my_events_details.html
@@ -5,7 +5,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <ul class="nav nav-tabs">
+                    <ul class="profil-tab nav nav-tabs">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
@@ -13,15 +13,16 @@
                             <a class="nav-link" href="{% url 'profil-events' %}">Mes évenements</a>
                         </li>
                         {% if person.person_type != "professionnel" %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes inscriptions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes inscriptions passées</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'profil-favorite-events' %}">Mes évenements favoris</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes inscriptions</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'profil-finished-events' %}">Mes inscriptions
+                                    passées</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'profil-favorite-events' %}">Mes évenements favoris</a>
+                            </li>
                         {% endif %}
                     </ul>
                 </div>
@@ -37,12 +38,22 @@
                         </div>
                     </div>
                     {% for event in events %}
-                        <div class="row ">
-                            <div class="col">
-                                <a href="{% url 'description-event' event.pk %}"><h3 class="mt-3">{{ event.title }}</h3></a><span>({{ event.category }})</span>
-                                <p>{{ event.event_date|date:'d/m - h:m' }}</p>
-                                <p>{{ event.description }}</p>
-                                <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
+                        <div class="card mt-3">
+                            <div class="card-header">
+                                <p class="text-left"><a href="{% url 'description-event' event.pk %}"><h4 class="mt-3">{{ event.title|title }}</h4></a></p>
+                            </div>
+                            <div class="card-body">
+                                <div class="d-flex">
+                                    <h5 class="card-title">Par {% if event.person.pk is not person.pk %}
+                                        <a class="show-user"
+                                           href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a>
+                                        {% else %}{{ event.person.pseudo }} {% endif %}
+                                    </h5>
+                                </div>
+                                <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}</p>
+                                <p class="card-text"><b>Lieu
+                                    :</b> {{ event.address }}, {{ event.zip_code }}, {{ event.city }}
+                                    le {{ event.event_date|date:'d/m/y à h:m' }}</p>
                                 <a href="{% url 'edit-event' event.pk %}" class="text-primary mr-2">Modifier</a>
                                 <a href="{% url 'delete-event' event.pk %}" class="text-danger" data-toggle="modal"
                                    data-target="#close_modal">Supprimer</a>
@@ -79,6 +90,7 @@
 
             </div>
         </div>
+
     </div>
 
 
