--- a/events/templates/persons/events/my_registered_events.html
+++ b/events/templates/persons/events/my_registered_events.html
@@ -5,7 +5,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <ul class="nav nav-tabs">
+                    <ul class="profil-tab nav nav-tabs">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
                         </li>
@@ -40,7 +40,7 @@
                                 <a href="{% url 'description-event' inscription.event.pk %}"><h3 class="mt-3">{{ inscription.event.title }}</h3></a>
                                 <span>({{ inscription.event.category }})</span>
                                 <p>Par {% if inscription.event.person.pk is not person.pk %}
-                                    <a href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
+                                    <a class="show-user" href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
                                     {{ inscription.event.person.pseudo }} {% endif %} le {{ inscription.event.event_date|date:'d/m/y à h:m' }}
                                 </p>
                                 <p>{{ inscription.event.description }}</p>
