--- a/events/templates/persons/profil/profil_detail.html
+++ b/events/templates/persons/profil/profil_detail.html
@@ -4,7 +4,7 @@
 {% block title %}Profil{% endblock %}
 
 {% block content %}
-    <ul class="nav nav-tabs">
+    <ul class="profil-tab nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link" href="{% url 'profil' %}">Mon profil</a>
         </li>
