--- a/events/templates/persons/base_navbar.html
+++ b/events/templates/persons/base_navbar.html
@@ -3,7 +3,8 @@
 
 {% block header %}
     <nav class="back-nav navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'home' %}">ShareEventTogether</a>
+{#        <a class="navbar-brand" href="{% url 'home' %}">ShareEventTogether</a>#}
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'assets/logo1.png' %}" height="50"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
