--- a/events/templates/persons/events/my_events_details.html
+++ b/events/templates/persons/events/my_events_details.html
@@ -1,7 +1,10 @@
 {% extends 'persons/base_navbar.html' %}
+{% load bootstrap4 %}
+{% load static %}
+
 
 {% block content %}
-    <div class="row">
+    <div class="row mb-3">
         <div class="col">
             <div class="row">
                 <div class="col">
@@ -37,55 +40,60 @@
                             {% endif %}
                         </div>
                     </div>
-                    {% for event in events %}
-                        <div class="card mt-3">
-                            <div class="card-header">
-                                <p class="text-left"><a href="{% url 'description-event' event.pk %}"><h4 class="mt-3">{{ event.title|title }}</h4></a></p>
-                            </div>
-                            <div class="card-body">
-                                <div class="d-flex">
-                                    <h5 class="card-title">Par {% if event.person.pk is not person.pk %}
-                                        <a class="show-user"
-                                           href="{% url 'profil-show-user' event.person.pk %}">{{ event.person.pseudo }}</a>
-                                        {% else %}{{ event.person.pseudo }} {% endif %}
-                                    </h5>
-                                </div>
-                                <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}</p>
-                                <p class="card-text"><b>Lieu
-                                    :</b> {{ event.address }}, {{ event.zip_code }}, {{ event.city }}
-                                    le {{ event.event_date|date:'d/m/y à h:m' }}</p>
-                                <a href="{% url 'edit-event' event.pk %}" class="text-primary mr-2">Modifier</a>
-                                <a href="{% url 'delete-event' event.pk %}" class="text-danger" data-toggle="modal"
-                                   data-target="#close_modal">Supprimer</a>
-                            </div>
-                        </div>
-                        <div id="close_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
-                             data-keyboard="false">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Supprimer cet évenement</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>Êtes-vous sûr de vouloir supprimer cet évenement</p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-link" type="button" data-dismiss="modal"
-                                                aria-label="Close">
-                                            <span aria-hidden="true">Annuler</span>
-                                        </button>
-                                        <a href="{% url 'delete-event' event.pk %}"
-                                           class="btn btn-danger">Confirmer</a>
+                    <div class="row d-flex">
+                        {% for event in events %}
+                            <div class="col-md-4">
+                                <div class="card mt-3">
+                                    {% with 'assets/category/'|add:event.category|add:'.jpeg' as category %}
+                                        <img src="{% static category %}" class="card-img category-img">
+                                    {% endwith %}
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <p class="text-left"><a href="{% url 'description-event' event.pk %}"><h4
+                                                    class="mt-3">{{ event.title|title }}</h4></a></p>
+                                        </div>
+                                        <p class="card-text"><b>Catégorie :</b> {{ event.category|title }}</p>
+                                        <p class="card-text"><b>Lieu
+                                            :</b> {{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
+                                        <p class="card-text"><b>Date :</b> {{ event.event_date|date:'d/m/y à h:m' }}</p>
+                                        <div class="action-card">
+                                            <a href="{% url 'edit-event' event.pk %}"
+                                               class="text-primary mr-2">Modifier</a>
+                                            <a href="{% url 'delete-event' event.pk %}" class="text-danger"
+                                               data-toggle="modal"
+                                               data-target="#close_modal">Supprimer</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    {% empty %}
-                        <p>Il n'y a pas d'évenements pour le moment</p>
-                    {% endfor %}
+                            <div id="close_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
+                                 data-keyboard="false">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Supprimer cet évenement</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Êtes-vous sûr de vouloir supprimer cet évenement</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button class="btn btn-link" type="button" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                <span aria-hidden="true">Annuler</span>
+                                            </button>
+                                            <a href="{% url 'delete-event' event.pk %}"
+                                               class="btn btn-danger">Confirmer</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% empty %}
+                            <p>Il n'y a pas d'évenements pour le moment</p>
+                        {% endfor %}
+                    </div>
                 </div>
 
             </div>
