--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% load static %}
 {% block content %}
-    <div class="row">
+    <div class="row mb-3">
         <div class="col">
             <div class="row">
                 <div class="col">
@@ -32,56 +32,106 @@
                         <h1 class="col-md-7">Mes Inscriptions passées</h1>
 
                     </div>
-                    {% for inscription in inscription_events %}
-                        <div class="row">
-                            <div class="col">
-                                <a href="{% url 'description-event' inscription.event.pk %}"><h3 class="mt-3">{{ inscription.event.title }}</h3></a><span>({{ inscription.event.category }})</span>
-                                <p>Par {% if inscription.event.person.pk is not person.pk %}
-                                    <a class="show-user" href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
-                                    {{ inscription.event.person.pseudo }} {% endif %}
-                                    le {{ inscription.event.event_date|date:'d/m/y à h:m' }}
-                                </p>
-                                <p>{{ inscription.event.description }}</p>
-                                <p>{{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}</p>
-                                {% if inscription.getKarma %}
-                                    <p class="text-success">{{ inscription.getKarma }}/10</p>
-                                {% else %}
-                                    <a class="text-success" data-toggle="modal"
-                                       data-target="#rating_modal_{{ inscription.event.pk }}">Noter</a>
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div id="rating_modal_{{ inscription.event.pk }}" class="modal fade" tabindex="-1" role="dialog"
-                             data-backdrop="static"
-                             data-keyboard="false">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Noter</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
+                    <div class="row d-flex">
+                        {% for inscription in inscription_events %}
+                            <div class="col-md-4">
+                                <div class="card mt-3">
+                                    <div>
+                                        {% with 'assets/category/'|add:inscription.event.category|add:'.jpeg' as category %}
+                                            <img src="{% static category %}" class="card-img category-img">
+                                        {% endwith %}
+                                        <div class="note justify-content-center align-items-center d-flex"
+                                             style="height: 40px; width: 40px; font-size: x-large">
+                                            {% if inscription.getKarma %}
+                                                 <div class="stacked-icons">
+                                                    <span class="fa-stack">
+                                                    <i class="fas fa-star fa-stack-2x"></i>
+                                                    <strong class="fa-stack-1x fa-stack-text fa-inverse text-dark">5</strong>
+                                                  </span>
+                                                 </div>
+                                            {% else %}
+                                                <a class="text-success" data-toggle="modal" data-target="#rating_modal_{{ inscription.event.pk }}"><i class="far fa-star fa-2x"></i></a>
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                    <form method="post"
-                                          action="{% url 'profil-rating-finished-events' inscription.event.pk %}">
-                                        <div class="modal-body">
-                                            {% csrf_token %}
-                                            {% bootstrap_field form.note required_css_class='required' %}
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <p class="text-left"><a
+                                                    href="{% url 'description-event' inscription.event.pk %}"><h4
+                                                    class="mt-3">{{ inscription.event.title|title }}</h4></a></p>
                                         </div>
-                                        <div class="modal-footer">
-                                            <button class="btn btn-link" type="button" data-dismiss="modal"
-                                                    aria-label="Close">
-                                                <span aria-hidden="true">Annuler</span>
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">Confirmer</button>
-                                        </div>
-                                    </form>
+                                        <p>Par {% if inscription.event.person.pk is not person.pk %}
+                                            <a class="show-user"
+                                               href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}
+                                            {{ inscription.event.person.pseudo }} {% endif %}
+                                        </p>
+                                        <p class="card-text"><b>Catégorie :</b> {{ inscription.event.category|title }}
+                                        </p>
+                                        <p class="card-text"><b>Lieu
+                                            :</b> {{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}
+                                            le {{ inscription.event.event_date|date:'d/m/y à h:m' }}</p>
+                                        <p class="card-text"><b>Date
+                                            :</b> {{ inscription.event.event_date|date:'d/m/y à h:m' }}</p>
+
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    {% empty %}
-                        <p>Il n'y a pas d'évenements pour le moment</p>
-                    {% endfor %}
+
+
+                            {#                            <div class="row">#}
+                            {#                                <div class="col">#}
+                            {#                                    <a href="{% url 'description-event' inscription.event.pk %}"><h3#}
+                            {#                                            class="mt-3">{{ inscription.event.title }}</h3>#}
+                            {#                                    </a><span>({{ inscription.event.category }})</span>#}
+                            {#                                    <p>Par {% if inscription.event.person.pk is not person.pk %}#}
+                            {#                                        <a class="show-user"#}
+                            {#                                           href="{% url 'profil-show-user' inscription.event.person.pk %}">{{ inscription.event.person.pseudo }}</a> {% else %}#}
+                            {#                                        {{ inscription.event.person.pseudo }} {% endif %}#}
+                            {#                                        le {{ inscription.event.event_date|date:'d/m/y à h:m' }}#}
+                            {#                                    </p>#}
+                            {#                                    <p>{{ inscription.event.description }}</p>#}
+                            {#                                    <p>{{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}</p>#}
+                            {#                                    {% if inscription.getKarma %}#}
+                            {#                                        <p class="text-success">{{ inscription.getKarma }}/10</p>#}
+                            {#                                    {% else %}#}
+                            {#                                        <a class="text-success" data-toggle="modal"#}
+                            {#                                           data-target="#rating_modal_{{ inscription.event.pk }}">Noter</a>#}
+                            {#                                    {% endif %}#}
+                            {#                                </div>#}
+                            {#                            </div>#}
+                            <div id="rating_modal_{{ inscription.event.pk }}" class="modal fade" tabindex="-1"
+                                 role="dialog"
+                                 data-backdrop="static"
+                                 data-keyboard="false">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Noter</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <form method="post"
+                                              action="{% url 'profil-rating-finished-events' inscription.event.pk %}">
+                                            <div class="modal-body">
+                                                {% csrf_token %}
+                                                {% bootstrap_field form.note required_css_class='required' %}
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-link" type="button" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                    <span aria-hidden="true">Annuler</span>
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">Confirmer</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        {% empty %}
+                            <p>Il n'y a pas d'évenements pour le moment</p>
+                        {% endfor %}
+                    </div>
                 </div>
 
             </div>
